--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 "scripts": {
   "dev": "ts-node src/index.ts",
   "start": "tsc && node dist/index.js",
-  "prettier": "prettier --write \"src/**/*.ts\""
+  "lint": "tslint -c tslint.json -p tsconfig.json",
+  "lint:fix": "npm run lint -- --fix",
+  "prettier": "prettier . --write"
 },
   "repository": {
     "type": "git",
@@ -25,7 +27,8 @@
     "express": "^5.1.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "prettier": "^3.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
@@ -34,6 +37,7 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "tslint": "^6.1.3"
   }
 }
